--- a/styles/main.css
+++ b/styles/main.css
@@ -28,33 +28,29 @@ body {
     font-size: 1.6rem;
     color: #444;
     margin: 0;
-    padding: 0 10px 10px 10px;
+    padding: 0;
 }
 
 /* parent div of h1 */
 .is {
     float: left;
-    margin-left: 30%;
-    position: relative;
+    margin-left: 29%;
     z-index: 2;
 }
 
 h1 {
     color: #2c3e50;
-    font-size: 2rem;
-    margin: 6px 0;
+    font-size: 2.2rem;
+    font-weight: normal;
+    margin: 4px 0;
     text-align: center;
     text-shadow: 0 0 5px #fff;
     text-transform: lowercase;
-    -webkit-transition: 150ms all ease-in-out;
-       -moz-transition: 150ms all ease-in-out;
-         -o-transition: 150ms all ease-in-out;
-            transition: 150ms all ease-in-out;
+    -webkit-transition: 100ms all ease-in-out;
+       -moz-transition: 100ms all ease-in-out;
+         -o-transition: 100ms all ease-in-out;
+            transition: 100ms all ease-in-out;
 }
-
-    .scrolled h1 {
-        margin: 6px 0;
-    }
 
 h2 {
     margin: 0 0 10px;
@@ -77,6 +73,10 @@ p {
     line-height: 2.5rem;
     margin: .75rem 0;
     max-width: 850px;
+    -webkit-transition: 200ms all ease-in-out;
+       -moz-transition: 200ms all ease-in-out;
+         -o-transition: 200ms all ease-in-out;
+            transition: 200ms all ease-in-out;
 }
 
 p.lead {
@@ -85,12 +85,13 @@ p.lead {
 }
 
 header {
-    background: #ecf0f1;
-    margin: 0 auto;
+    background: rgba(255, 255, 255, .95);
+    box-shadow: 0 2px 5px #ccc;
     max-width: 140rem;
-    overflow: hidden;
+    padding: 1rem;
     position: fixed;
-    width: calc(100% - 20px);
+        top: 0;
+    width: 100%;
 }
 
 /* code styles for when not using prism.js */
@@ -104,28 +105,20 @@ pre > code {
     background: none; /* fixes issues with prism styles */
 }
 
-/* child div of header */
-.chapel {
-    background: #fff;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    margin-top: 20px;
-    padding: 10px 20px 0;
-}
-
 .logo {
     float: left;
     max-width: 60px; /* IE8 fallaback */
     max-width: 5rem;
     position: fixed;
-    -webkit-transition: 150ms all ease-in-out;
-       -moz-transition: 150ms all ease-in-out;
-         -o-transition: 150ms all ease-in-out;
-            transition: 150ms all ease-in-out;
+    -webkit-transition: 100ms all ease-in-out;
+       -moz-transition: 100ms all ease-in-out;
+         -o-transition: 100ms all ease-in-out;
+            transition: 100ms all ease-in-out;
     z-index: 1;
 }
 
-    .logo:hover {
+    .logo:hover,
+    .scrolled .logo:hover {
         -webkit-transform: scale( 1.2, 1.2 ) rotate( -5deg );
            -moz-transform: scale( 1.2, 1.2 ) rotate( -5deg );
             -ms-transform: scale( 1.2, 1.2 ) rotate( -5deg );
@@ -134,109 +127,111 @@ pre > code {
     }
 
     .scrolled .logo {
-        -webkit-transform: scale( .5, .5 ) translate( -30px, 0 );
-           -moz-transform: scale( .5, .5 ) translate( -30px, 0 );
-            -ms-transform: scale( .5, .5 ) translate( -30px, 0 );
-             -o-transform: scale( .5, .5 ) translate( -30px, 0 );
-                transform: scale( .5, .5 ) translate( -30px, 0 );
+        -webkit-transform: scale( .75, .75 ) translate( -10px, 0 );
+           -moz-transform: scale( .75, .75 ) translate( -10px, 0 );
+            -ms-transform: scale( .75, .75 ) translate( -10px, 0 );
+             -o-transform: scale( .75, .75 ) translate( -10px, 0 );
+                transform: scale( .75, .75 ) translate( -10px, 0 );
     }
 
 /* menu icon */
 .really {
     float: right;
-    margin-top: .7rem;
+    margin-top: .6rem;
 }
 
 a.menu {
     cursor: pointer;
-    display: inline-block;
     float: right;
-    height: 2rem;
-    position: relative;
-        bottom: 2px;
-    width: 2rem;
+    height: 2.5rem;
+    width: 2.5rem;
 }
 
     a.menu span {
-        margin: 0 auto;
         position: relative;
-            top: 12px;
+            top: 10px;
         -webkit-transition-duration: 0s;
            -moz-transition-duration: 0s;
              -o-transition-duration: 0s;
                 transition-duration: 0s;
-        -webkit-transition-delay: .2s;
-           -moz-transition-delay: .2s;
-             -o-transition-delay: .2s;
-                transition-delay: .2s;
+        -webkit-transition-delay: 100ms;
+           -moz-transition-delay: 100ms;
+             -o-transition-delay: 100ms;
+                transition-delay: 100ms;
     }
 
     a.menu span:before,
     a.menu span:after {
         content: '';
         position: absolute;
-        -webkit-transition: margin .2s linear .2s, -webkit-transform .2s linear 0s;
-           -moz-transition: margin .2s linear .2s,    -moz-transform .2s linear 0s;
-             -o-transition: margin .2s linear .2s,      -o-transform .2s linear 0s;
-                transition: margin .2s linear .2s,         transform .2s linear 0s;
+        -webkit-transition: margin 100ms linear 100ms, -webkit-transform 100ms linear 0s;
+           -moz-transition: margin 100ms linear 100ms,    -moz-transform 100ms linear 0s;
+             -o-transition: margin 100ms linear 100ms,      -o-transform 100ms linear 0s;
+                transition: margin 100ms linear 100ms,         transform 100ms linear 0s;
     }
 
     a.menu span:before {
-        margin-top: -6px;
+        margin-top: -7px;
     }
 
     a.menu span:after {
-        margin-top: 6px;
+        margin-top: 7px;
     }
 
     a.menu span:before,
     a.menu span,
     a.menu span:after {
         background-color: #2c3e50;
+        border-radius: 3px;
         display: block;
-        height: .2rem;
-        width: 2rem;
+        height: .4rem;
+        width: 2.5rem;
     }
     
     /* menu open */
-    a.menu.open span {
+    .open a.menu span {
         background-color: transparent;
     }
 
-    .menu.open span:before {
+    .open .menu span:before {
         margin-top: 0;
         -webkit-transform: rotate(45deg);
            -moz-transform: rotate(45deg);
             -ms-transform: rotate(45deg);
              -o-transform: rotate(45deg);
                 transform: rotate(45deg);
-        -webkit-transition-delay: 0, .2s;
-           -moz-transition-delay: 0, .2s;
-             -o-transition-delay: 0, .2s;
-                transition-delay: 0, .2s;
+        -webkit-transition-delay: 0, 100ms;
+           -moz-transition-delay: 0, 100ms;
+             -o-transition-delay: 0, 100ms;
+                transition-delay: 0, 100ms;
     }
-    .menu.open span:after {
+    .open .menu span:after {
         margin-top: 0;
         -webkit-transform: rotate(-45deg);
            -moz-transform: rotate(-45deg);
             -ms-transform: rotate(-45deg);
              -o-transform: rotate(-45deg);
                 transform: rotate(-45deg);
-        -webkit-transition-delay: 0, .2s;
-           -moz-transition-delay: 0, .2s;
-             -o-transition-delay: 0, .2s;
-                transition-delay: 0, .2s;
+        -webkit-transition-delay: 0, 100ms;
+           -moz-transition-delay: 0, 100ms;
+             -o-transition-delay: 0, 100ms;
+                transition-delay: 0, 100ms;
     }
 
 /* nav shown / hidden by the menu icon */
 nav {
     clear: both;
-    padding: 20px 0 10px;
+    height: 0;
+    overflow: hidden;
     text-align: center;
+    -webkit-transition: 150ms all ease-in-out;
+       -moz-transition: 150ms all ease-in-out;
+         -o-transition: 150ms all ease-in-out;
+            transition: 150ms all ease-in-out;
 }
 
-    .scrolled nav {
-        padding: 10px 0 10px;
+    .open + nav {
+        padding: 21px 0;
     }
 
 nav > ul {
@@ -247,7 +242,7 @@ nav > ul {
 
 nav > ul > a {
     display: inline-block;
-    margin: 0 0 10px 3%;
+    margin: 0 0 5px 2%;
 }
 
     nav > ul > a:first-child {
@@ -272,29 +267,28 @@ nav > ul > a.active,
 
 /* main content div */
 .coolest {
-    background: #fff;
+    background: #ecf0f1;
     border-radius: 3px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     margin: 0 auto;
     max-width: 140rem;
-    overflow: hidden;
     padding: 10px;
 }
 
 /* direct child of main content div */
 .web {
-    margin: 100px auto 0;
+    margin: 50px auto 0;
     max-width: 1000px;
 }
 
 a {
     color: #3498db;
     text-decoration: none;
-    -webkit-transition: 150ms all ease-in-out;
-       -moz-transition: 150ms all ease-in-out;
-         -o-transition: 150ms all ease-in-out;
-            transition: 150ms all ease-in-out;
+    -webkit-transition: 200ms all ease-in-out;
+       -moz-transition: 200ms all ease-in-out;
+         -o-transition: 200ms all ease-in-out;
+            transition: 200ms all ease-in-out;
 }
 
     a:hover,
@@ -392,10 +386,10 @@ section article li {
 .special-list li {
     padding-left: 10px;
     position: relative;
-    -webkit-transition: .2s all ease-in-out;
-       -moz-transition: .2s all ease-in-out;
-         -o-transition: .2s all ease-in-out;
-            transition: .2s all ease-in-out;
+    -webkit-transition: 100ms all ease-in-out;
+       -moz-transition: 100ms all ease-in-out;
+         -o-transition: 100ms all ease-in-out;
+            transition: 100ms all ease-in-out;
 }
 
 .special-list li i {
@@ -582,8 +576,9 @@ a.googleplus:hover {
 }
 
 footer {
+    clear: both;
     font-size: 1.4rem;
-    margin: 10px auto;
+    margin: 10px;
     max-width: 140rem;
     padding: 0;
 }
@@ -603,10 +598,6 @@ footer {
         padding: 1px 3px 0 3px; 
     }
 
-    .web {
-        margin: 120px auto 0;
-    }
-
     .bio p {
         line-height: 2.4rem;
     }
@@ -614,47 +605,50 @@ footer {
 }
 
 @media (min-width: 400px) {
-    
-    body {
-        padding: 0 20px 20px 20px;
-    }
-
-    header {
-        width: calc(100% - 40px);
-    }
-
-    .coolest {
-        padding: 20px;
-    }
 
     .chapel {
         padding: 10px 20px;
     }
 
     .logo {
-        margin: 10px 0;
-        max-width: 10rem;
+        max-width: 8rem;
     }
 
         .scrolled .logo {
-            -webkit-transform: scale( .65, .65 ) translate( -30px, -30px );
-               -moz-transform: scale( .65, .65 ) translate( -30px, -30px );
-                -ms-transform: scale( .65, .65 ) translate( -30px, -30px );
-                 -o-transform: scale( .65, .65 ) translate( -30px, -30px );
-                    transform: scale( .65, .65 ) translate( -30px, -30px );
+            -webkit-transform: scale( .75, .75 ) translate( -20px, 0px );
+               -moz-transform: scale( .75, .75 ) translate( -20px, 0px );
+                -ms-transform: scale( .75, .75 ) translate( -20px, 0px );
+                 -o-transform: scale( .75, .75 ) translate( -20px, 0px );
+                    transform: scale( .75, .75 ) translate( -20px, 0px );
         }
 
-    h1 {
-        margin: 31px 0;
+    .is {
+        margin-left: 34%;
     }
 
-    nav,
-    .scrolled nav {
-        padding: 20px 0 10px;
+    h1 {
+        font-size: 2.7rem;
+        margin: 11px 0;
+    }
+
+    .really {
+        margin-top: 1.6rem;
+    }
+
+    nav {
+        text-align: right;
+    }
+
+    .open + nav {
+        padding: 30px 0;
+    }
+
+    .coolest {
+        padding: 20px;
     }
 
     .web {
-        margin: 170px auto 0;
+        margin: 10rem auto 0;
     }
 
     p,
@@ -671,10 +665,6 @@ footer {
         line-height: 3rem;
         max-width: 850px;
     }
-
-    footer {
-        margin: 20px auto;
-    }
 }
 
 @media (min-width: 430px) {
@@ -686,11 +676,6 @@ footer {
 }
 
 @media (min-width: 600px) {
-    
-    nav {
-        padding: 0 0 10px;
-        text-align: right;
-    }
 
     nav > ul > a {
         margin-left: 3%;
@@ -710,6 +695,7 @@ footer {
     }
 
     header {
+        border-radius: 3px;
         position: static;
         width: auto;
     }
@@ -722,12 +708,17 @@ footer {
         margin-top: 0;
     }
 
+    .coolest {
+        margin-top: 5px;
+        padding: 20px 0;
+    }
+
     .web {
         margin: 0 auto;
     }
 
-    nav {
-        padding: 10px 0;
+    footer {
+        margin: 0;
     }
 }
 
@@ -740,6 +731,10 @@ footer {
     h1 {
         font-size: 2.5rem;
         margin: 25px 0;
+    }
+
+    .really {
+        display: none;
     }
 
     nav {
