--- a/styles/main.css
+++ b/styles/main.css
@@ -27,7 +27,8 @@ body {
     font-family: "Muli", helvetica, arial, sans-serif;
     font-size: 1.6rem;
     color: #444;
-    margin: 0;
+    margin: 0 auto;
+    max-width: 140rem;
     padding: 0;
 }
 
@@ -73,10 +74,10 @@ p {
     line-height: 2.5rem;
     margin: .75rem 0;
     max-width: 850px;
-    -webkit-transition: 200ms all ease-in-out;
-       -moz-transition: 200ms all ease-in-out;
-         -o-transition: 200ms all ease-in-out;
-            transition: 200ms all ease-in-out;
+    -webkit-transition: 200ms color ease-in-out;
+       -moz-transition: 200ms color ease-in-out;
+         -o-transition: 200ms color ease-in-out;
+            transition: 200ms color ease-in-out;
 }
 
 p.lead {
@@ -271,14 +272,13 @@ nav > ul > a.active,
     border-radius: 3px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-    margin: 0 auto;
-    max-width: 140rem;
+    overflow: hidden;
     padding: 10px;
 }
 
 /* direct child of main content div */
 .web {
-    margin: 50px auto 0;
+    margin: 7rem auto 0;
     max-width: 1000px;
 }
 
@@ -342,17 +342,18 @@ section article li {
 }
 
 .content-list > a {
-    border-top: 2px solid #ecf0f1;
+    border-top: 2px dotted #2c3e50;
     display: block;
     padding: 10px 0;
 }
     
     .content-list > a:first-child {
         border-top: none;
+        padding-top: 0;
     }
 
-    .content-list > a:hover {
-
+    .content-list > a:hover .title {
+        color: #e74c3c;
     }
 
 .content-list .title {
@@ -397,14 +398,17 @@ section article li {
     padding: 0 10px;
     position: absolute;
         left: -25px;
+        top: 2px;
 }
 
 @-webkit-keyframes checkr {
     0% {
         font-size: 3rem;
+        -webkit-transform: rotate( 72deg );
     }
     100% {
         font-size: 2rem;
+        -webkit-transform: rotate( 0 );
     }
 }
 
@@ -420,9 +424,11 @@ section article li {
 @keyframes checkr {
     0% {
         font-size: 3rem;
+        transform: rotate( 72deg );
     }
     100% {
         font-size: 2rem;
+        transform: rotate( 0 );
     }
 }
 
@@ -482,6 +488,10 @@ input[type="submit"] {
     cursor: pointer;
     max-width: 45rem;
     padding: 15px;
+    -webkit-transition: 100ms all ease-in-out;
+       -moz-transition: 100ms all ease-in-out;
+         -o-transition: 100ms all ease-in-out;
+            transition: 100ms all ease-in-out;
 }
 
     input[type="submit"]:hover {
@@ -508,6 +518,16 @@ input[type="submit"] {
 
     .info:first-of-type {
         margin-top: 0;
+    }
+
+/* thank you page gift */
+.emoji {
+    font-size: 7rem;
+    margin: 6rem 0;
+}
+
+    .emoji .smile {
+        vertical-align: sub;
     }
 
 /* the blurb about me on the bottom (or side) of the page */
@@ -547,31 +567,31 @@ aside {
         margin-bottom: 0;
     }
 
-a.social-links {
+.bio a.social-links {
     margin-bottom: 5px;
 }
 
-a.linkedin:hover {
+.bio a.linkedin:hover {
     background: #0976b4;
 }
 
-a.github:hover {
+.bio a.github:hover {
     background: #333;
 }
 
-a.twitter:hover {
+.bio a.twitter:hover {
     background: #55acee;
 }
 
-a.flickr:hover {
+.bio a.flickr:hover {
     background: #ff0084;
 }
 
-a.youtube:hover {
+.bio a.youtube:hover {
     background: #cd201f;
 }
 
-a.googleplus:hover {
+.bio a.googleplus:hover {
     background: #dd4b39;
 }
 
@@ -600,6 +620,10 @@ footer {
 
     .bio p {
         line-height: 2.4rem;
+    }
+
+    .emoji {
+        font-size: 8rem;
     }
 
 }
@@ -665,6 +689,10 @@ footer {
         line-height: 3rem;
         max-width: 850px;
     }
+
+    .emoji {
+        font-size: 10rem;
+    }
 }
 
 @media (min-width: 430px) {
@@ -679,6 +707,11 @@ footer {
 
     nav > ul > a {
         margin-left: 3%;
+    }
+    
+    .emoji {
+        font-size: 16rem;
+        margin: 9rem 0 15rem;
     }
 
 }
@@ -717,6 +750,11 @@ footer {
         margin: 0 auto;
     }
 
+    .emoji {
+        font-size: 21rem;
+        margin: 12rem 0 20rem;
+    }
+
     footer {
         margin: 0;
     }
@@ -745,6 +783,10 @@ footer {
         float: left;
         margin-right: 5%;
         width: 70%;
+    }
+
+    .emoji {
+        font-size: 18rem;
     }
 
     .developer {
